--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios": "^0.18.1",
     "echarts": "^3.8.5",
     "element-ui": "2.4.9",
+    "file-saver": "^2.0.2",
     "readable-stream": "^3.4.0",
     "serialport": "^7.1.5",
     "vue": "^2.5.16",
@@ -87,7 +88,7 @@
     "css-loader": "^0.28.4",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
+    "electron": "^2.0.18",
     "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
